Linkando o Main site Portifolio com o projeto Lig4 (corrigido))

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
     <!-- Section 02 - Links to Projects -->
     <div class="projects" id="section2">
-        <a href = "./projects/project01_ligue-4/" class="projects-item" id="project1">Ligue-4</a>
+        <a href = "./projects/project01_ligue-4/ligue4.html" class="projects-item" id="project1">Ligue-4</a>
         <a href = "#" class="projects-item" id="project2">Projeto 2</a>
         <a href = "#" class="projects-item" id="project3">Projeto 3</a>
         <a href = "#" class="projects-item" id="project4">Projeto 4</a>
