--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
                 <a href="#section2">Projetos</a>
             </li>
             <li>
-                <a href="#section3">Technologias</a>
+                <a href="#section3">Tecnologias</a>
             </li>                
             <li>
-                <a href="#section4">Nosso Time</a>
+                <a href="#section4">Nossa Equipe</a>
             </li>
             <li>
                 <a href="#section5">Contato</a>
@@ -94,7 +94,7 @@
 
     <!-- Section 03 Technologies -->
     <div class="technologies" id="section3">
-        <h1>Main Technologies</h1>
+        <h1>Technologias Principais</h1>
         <ul class="technologies-box" >
             <li class="technologies-box-item" id="technologies-html">HTML5</li>
             <li class="technologies-box-item" id="technologies-css">CSS3</li>
@@ -105,7 +105,7 @@
     <!-- Section 04  Our Team-->
     
         <div class="about-us-container" id="section4">
-            <h1>About Us</h1>
+            <h1>Nossa Equipe</h1>
             <div class="about-us-container-profiles" id="profile1-jean">
                 <img src="images/profiles/jean.jpg"/>
                 <text>Jean Jacques</text>
@@ -140,33 +140,33 @@
                     <div class="contacts">
 
                         <div class="contato">
-                            Name: Wister<br>
-                            Email: wister.sousa2@gmail.com<br> 
-                            Phone: +55 (63) 98512-2404
+                            Nome: Wister<br>
+                            E-mail: wister.sousa2@gmail.com<br> 
+                            Telefone: +55 (63) 98512-2404
                         </div>
 
                         <div class="contato">
-                            Name: Victor<br>
-                            Email: viictor.ivan@gmail.com<br> 
-                            Phone: +55 (81) 98167-1817
+                            Nome: Victor<br>
+                            E-mail: viictor.ivan@gmail.com<br> 
+                            Telefone: +55 (81) 98167-1817
                         </div>
 
                         <div class="contato">
-                            Name: Jean<br>
-                            Email: jeanjacques7.jj@gmail.com<br> 
-                            Phone: +55 (85) 98681-6457
+                            Nome: Jean<br>
+                            E-mail: jeanjacques7.jj@gmail.com<br> 
+                            Github: <a class="link" href="https://github.com/FPDPanda" target="_blank">github.com/FPDPanda</a>
                         </div>
 
                         <div class="contato">
-                            Name: Jhonatan<br>
-                            Email:  jhonatan.serafim@gmail.com<br> 
-                            Phone: +55 (11) 95159-6731
+                            Nome: Jhonatan<br>
+                            E-mail:  jhonatan.serafim@gmail.com<br> 
+                            Telefone: +55 (11) 95159-6731
                         </div>
                        
                         <div class="contato">
-                            Name: Rodrigo<br>
-                            Email: rodrigoloha@gmail.com<br> 
-                            Phone: +55 (41) 99764-4009
+                            Nome: Rodrigo<br>
+                            E-mail: rodrigoloha@gmail.com<br> 
+                            Telefone: +55 (41) 99764-4009
                         </div>
 
                     </div>              
