✏️ Front-end - Alterando para português

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DevTeam</title>
+    <title>Dev-se</title>
 
     <link rel="stylesheet" href="./styles/main.css" />
     <link rel="stylesheet" href="./styles/navbar.css" />
@@ -39,10 +39,10 @@
                     <a href="#section2">Projetos</a>
                 </li>
                 <li>
-                    <a href="#section3">Technologias</a>
+                    <a href="#section3">Tecnologias</a>
                 </li>                
                 <li>
-                    <a href="#section4">Nosso Time</a>
+                    <a href="#section4">Nossa Equipe</a>
                 </li>
                 <li>
                     <a href="#section5">Contato</a>
