✏️ Front-end - Atualizando nomes

--- a/index.html
+++ b/index.html
@@ -108,15 +108,15 @@
             <h1>Nossa Equipe</h1>
             <div class="about-us-container-profiles" id="profile1-jean">
                 <img src="images/profiles/jean.jpg"/>
-                <text>Jean Jacques</text>
+                <text>Wister</text>
             </div>
             <div class="about-us-container-profiles" id="profile2-rafael">
                 <img src="images/profiles/jean.jpg"/>
-                <text>Rafael</text>
+                <text>Victor</text>
             </div>
             <div class="about-us-container-profiles" id="profile3-victor">
                 <img src="images/profiles/jean.jpg"/>
-                <text>Victor</text>
+                <text>Jean Jacques</text>
             </div>
             <div class="about-us-container-profiles" id="profile4-jhonatan">
                 <img src="images/profiles/jean.jpg"/>
@@ -128,7 +128,7 @@
             </div>
             <div class="about-us-container-profiles" id="profile6-christian">
                 <img src="images/profiles/jean.jpg"/>
-                <text>Christian</text>
+                <text>João</text>
             </div>
             <span style="clear: both;"></span>
 
@@ -136,7 +136,7 @@
         
             <div class="" id="section5">
                 <div class="realfooter">
-                    <h3>Contact</h3>
+                    <h3>Contato</h3>
                     <div class="contacts">
 
                         <div class="contato">
