--- a/projects/project01_ligue-4/sample_page.html
+++ b/projects/project01_ligue-4/sample_page.html
@@ -7,6 +7,7 @@
     <title>Sample page</title>
 </head>
 <body>
+    <button id="btnReset">RESET</button>
     <ul id="ul">
         
         <div id="pipe"></div>
