--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
        <nav id='navbar'>
             <ul class="list menu">
                 <li>
-                    <a class="active" href="#">Home</a>
+                    <a class="active" href="#section1">Home</a>
                 </li>
                 <li>
                     <a href="#section2">Projetos</a>
@@ -63,7 +63,7 @@
     <nav id='hamb-navbar'>
         <ul class="list menu">
             <li>
-                <a class="active" href="#">Home</a>
+                <a class="active" href="#section1">Home</a>
             </li>
             <li>
                 <a href="#section2">Projetos</a>
@@ -80,7 +80,7 @@
         </ul>
     </nav>
 
-    <div class="hello-world">
+    <div class="hello-world" id="section1">
         <h1>Hello, world!</h1>
     </div>
 
