✏️ Front-end - Ditando as regras do jogo

--- a/projects/project01_ligue-4/ligue4.html
+++ b/projects/project01_ligue-4/ligue4.html
@@ -31,16 +31,16 @@
 
                 <h1>Regras</h1>
                 <ul id='rules'>
-                    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet quisquam enim ipsa a. Culpa mollitia blanditiis architecto et est sint earum sit. Distinctio accusantium illum dolore libero aliquid laudantium tenetur.
+                    <li>Os jogadores irão alternar entre si quem joga, em cada turno cada um solta uma pedra no tabuleiro
                     </li>
 
-                    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet quisquam enim ipsa a. Culpa mollitia blanditiis architecto et est sint earum sit. Distinctio accusantium illum dolore libero aliquid laudantium tenetur.
+                    <li>As pedras irão cair até onde for possível (Ou no chão ou em cima de outra pedra)
                     </li>
 
-                    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet quisquam enim ipsa a. Culpa mollitia blanditiis architecto et est sint earum sit. Distinctio accusantium illum dolore libero aliquid laudantium tenetur.
+                    <li>O objetivo é ligar 4! Quem conseguir ligar uma linha de 4 pedras primeiro (na vertical, horizontal ou diagonal) vence!!
                     </li>
 
-                    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet quisquam enim ipsa a. Culpa mollitia blanditiis architecto et est sint earum sit. Distinctio accusantium illum dolore libero aliquid laudantium tenetur.
+                    <li>Divirta-se!
                     </li>
                 </ul>
             
