--- a/projects/project01_ligue-4/ligue4.html
+++ b/projects/project01_ligue-4/ligue4.html
@@ -16,7 +16,7 @@
     <body>
 
         <header id="header">
-            <a href="../../index.html"><img id="header-logo" src="../../images/icons/code-angle-brackets.png"></a>
+            <a id="header-logo" href="../../index.html"><img src="../../images/icons/code-angle-brackets.png"></a>
             <h1 id='title'> Ligue-4 </h1>
 
             <!-------------------------------- Call de regras ------------------------------------------------------>
