👨‍💻 Scripts - Função para background desaparecer quando abrir as regras

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header class="header">
 
         <!-- Left side (Icon) -->
-        <img id="header-logo" src="images/icons/code-angle-brackets.png">
+        <a href ="#section1" id="header-logo"><img src="images/icons/code-angle-brackets.png"></a>
 
         <!-- Right side (Links)-->
        <nav id='navbar'>
