Changing location of the X icon

--- a/projects/project01_ligue-4/ligue4.html
+++ b/projects/project01_ligue-4/ligue4.html
@@ -25,7 +25,7 @@
             <div id='container-rules-id' class="container-rules">
                 <button onclick='closeRegras()' id="botaorules">
                     <div id="imgBtn">
-                        <img src="assets/xx.png" alt="Close rules">
+                        <img src="./images/icons/xx.png" alt="Close rules">
                     </div>
                 </button>
 
