Down-Arrow substituindo pipe

--- a/projects/project01_ligue-4/ligue4.html
+++ b/projects/project01_ligue-4/ligue4.html
@@ -54,7 +54,7 @@
         <div id="containerGame">
             <ul id="ul">
                 
-                <div id="pipe"></div>
+                <img id="pipe" src="./images/icons/down-arrow.png">
         
                 <li class="lis"></li>
                 <li class="lis"></li>
