Created a blink animation

--- a/projects/project01_ligue-4/ligue4.html
+++ b/projects/project01_ligue-4/ligue4.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="../../styles/main.css"/>
         <link rel="stylesheet" href="./css/ligue4.css" />
         <link rel="stylesheet" href="./css/game.css">
+        <link rel="stylesheet" href="./css/animations.css">
         <script src="./javascript/regras.js"></script>
         <!-------------------------- Arquivos necessarios para as regras --------------------------------->
         <link rel="stylesheet" href="./css/regras.css">
