Mensagem de vitória

--- a/projects/project01_ligue-4/ligue4.html
+++ b/projects/project01_ligue-4/ligue4.html
@@ -56,7 +56,7 @@
         <!-------------------------------- Fim de regras ------------------------------------------------------->
     </header>
 
-    <!-- Colocar a id #containerGame no container principal se quiser que a div das regras apareça sozinha -->
+    <p class="blink" id="winner"></p>
     <div id="containerGame">
         <ul id="ul">
             <img id="pipe" src="./images/icons/down-arrow.png" />
