--- a/projects/project01_ligue-4/ligue4.html
+++ b/projects/project01_ligue-4/ligue4.html
@@ -69,6 +69,7 @@
             <li class="lis"></li>
             <li class="lis"></li>
         </ul>
+        <script src="Class/Sounds.js"></script>
         <script src="Class/Ball.js"></script>
         <script src="Controller/Controller.js"></script>
         <script src="src/js/config.js"></script>
