--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <div class="contato">
                             Nome: Wister<br>
                             E-mail: wister.sousa2@gmail.com<br> 
-                            Telefone: +55 (63) 98512-2404
+                            Github: <a class="link" href="https://github.com/Wisterleys" target="_blank">github.com/Wisterleys</a>
                         </div>
 
                         <div class="contato">
@@ -160,13 +160,13 @@
                         <div class="contato">
                             Nome: Jhonatan<br>
                             E-mail:  jhonatan.serafim@gmail.com<br> 
-                            Telefone: +55 (11) 95159-6731
+                            Telefone:
                         </div>
                        
                         <div class="contato">
                             Nome: Rodrigo<br>
                             E-mail: rodrigoloha@gmail.com<br> 
-                            Telefone: +55 (41) 99764-4009
+                            Telefone:
                         </div>
 
                     </div>              
