✏️ Front-end - Adicionando imagem do membro Wister

--- a/index.html
+++ b/index.html
@@ -106,17 +106,17 @@
     
         <div class="about-us-container" id="section4">
             <h1>Nossa Equipe</h1>
-            <div class="about-us-container-profiles" id="profile1-jean">
-                <img src="images/profiles/jean.jpg"/>
+            <div class="about-us-container-profiles" id="profile1-wister">
+                <img src="images/profiles/wister.jpg"/>
                 <text>Wister</text>
             </div>
-            <div class="about-us-container-profiles" id="profile2-rafael">
+            <div class="about-us-container-profiles" id="profile2-jean">
                 <img src="images/profiles/jean.jpg"/>
-                <text>Victor</text>
+                <text>Jean Jacques</text>
             </div>
             <div class="about-us-container-profiles" id="profile3-victor">
                 <img src="images/profiles/jean.jpg"/>
-                <text>Jean Jacques</text>
+                <text>Victor</text>
             </div>
             <div class="about-us-container-profiles" id="profile4-jhonatan">
                 <img src="images/profiles/jean.jpg"/>
@@ -126,7 +126,7 @@
                 <img src="images/profiles/jean.jpg"/>
                 <text>Rodrigo</text>
             </div>
-            <div class="about-us-container-profiles" id="profile6-christian">
+            <div class="about-us-container-profiles" id="profile6-joao">
                 <img src="images/profiles/jean.jpg"/>
                 <text>João</text>
             </div>
