--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" 
+      href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap"
       rel="stylesheet"
     />
     <script src="./HomeJS/index.js"></script>
@@ -41,7 +41,7 @@
           </li>
           <li>
             <a href="#section3">Tecnologias</a>
-          </li>                
+          </li>
           <li>
             <a href="#section4">Nossa Equipe</a>
           </li>
@@ -71,7 +71,7 @@
         </li>
         <li>
           <a href="#section3">Tecnologias</a>
-        </li>                
+        </li>
         <li>
           <a href="#section4">Nossa Equipe</a>
         </li>
@@ -87,15 +87,20 @@
 
     <!-- Section 02 - Links to Projects -->
     <div class="projects" id="section2">
-      <a
-        href="./projects/project01_ligue-4/ligue4.html"
+
+      <a href="./projects/project01_ligue-4/ligue4.html"
         class="projects-item"
         id="project1"
-        >Ligue-4</a
       >
+        Ligue-4
+      </a>
+
       <a href="#" class="projects-item" id="project2">Projeto 2</a>
+
       <a href="#" class="projects-item" id="project3">Projeto 3</a>
+
       <a href="#" class="projects-item" id="project4">Projeto 4</a>
+
     </div>
 
     <!-- Section 03 Technologies -->
@@ -108,7 +113,7 @@
       </ul>
     </div>
 
-    <!-- Section 04 Our Team -->    
+    <!-- Section 04 Our Team -->
     <div class="about-us-container" id="section4">
       <h1>Nossa Equipe</h1>
       <div class="about-us-container-profiles" id="profile1-wister">
@@ -144,7 +149,7 @@
       <span style="clear: both;"></span>
     </div>
 
-    <!-- Section 05 Contato -->        
+    <!-- Section 05 Contato -->
     <div class="" id="section5">
       <div class="realfooter">
         <h3>Contato</h3>
@@ -158,7 +163,7 @@
 
           <div class="contato">
               Nome: Victor<br>
-              E-mail: viictor.ivan@gmail.com<br> 
+              E-mail: viictor.ivan@gmail.com<br>
               Telefone: +55 (81) 98167-1817
           </div>
 
@@ -170,20 +175,20 @@
 
           <div class="contato">
               Nome: Jhonatan<br>
-              E-mail:  jhonatan.serafim@gmail.com<br> 
+              E-mail:  jhonatan.serafim@gmail.com<br>
               Telefone:
           </div>
-          
+
           <div class="contato">
               Nome: Rodrigo<br>
-              E-mail: rodrigoloha@gmail.com<br> 
+              E-mail: rodrigoloha@gmail.com<br>
               Telefone:
           </div>
 
-          </div>              
+          </div>
         </div>
 
-      </div>            
+      </div>
     </div>
   </body>
 </html>
